<resources>
    <string name="app_name">ecoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EcoActivity</string>
    <string name="nav_header_subtitle">supportecoactivity@gmail.com</string>
    <string name="nav_header_desc">Logo</string>
    <string name="action_settings">+</string>
    <string name="menu_educacional">Educacional</string>
    <string name="menu_painel">Painel</string>
    <string name="menu_graficos">Gráficos</string>
    <string name="menu_aparelhos">Aparelhos</string>
    <string name="menu_notificacoes">Notificações</string>
    <string name="menu_conta">Conta</string>
    <string name="menu_register">Registro</string>
    <string-array name="tipos_de_aparelhos">
        <item>Eletrodoméstico</item>
        <item>Segurança</item>
        <item>Iluminação</item>
        <item>Eletrônicos</item>
        <item>Aquecimento</item>
        <item>Ar-condicionado</item>
    </string-array>

</resources>