<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_painel">

    <fragment
        android:id="@+id/nav_painel"
        android:name="com.ecoactivity.app.ui.PainelFragment"
        android:label="@string/menu_painel"
        tools:layout="@layout/fragment_painel" />

    <fragment
        android:id="@+id/nav_graficos"
        android:name="com.ecoactivity.app.ui.GraficosFragment"
        android:label="@string/menu_graficos"
        tools:layout="@layout/fragment_graficos" />

    <fragment
        android:id="@+id/nav_aparelhos"
        android:name="com.ecoactivity.app.ui.AparelhoFragment"
        android:label="@string/menu_aparelhos"
        tools:layout="@layout/fragment_aparelho" />

    <fragment
        android:id="@+id/nav_notificacoes"
        android:name="com.ecoactivity.app.ui.notification.NotificationFragment"
        android:label="@string/menu_notificacoes"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.ecoactivity.app.ui.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_conta"
        android:name="com.ecoactivity.app.ui.conta.ContaFragment"
        android:label="@string/menu_conta"
        tools:layout="@layout/fragment_conta" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.ecoactivity.app.ui.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_educacional"
        android:name="com.ecoactivity.app.ui.EducacionalFragment"
        android:label="Educacional"
        tools:layout="@layout/fragment_educacional"/>


</navigation>